<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ensate.robotixcarrc.MainActivity">

    <item android:id="@+id/connect_scan_menu_item"
        android:icon="@drawable/ic_bluetooth_searching_black_24dp"
        app:showAsAction="ifRoom" android:title="@string/connect_device"/>

    <item android:id="@+id/connect_scan"
        app:showAsAction="never"
        android:title="@string/connect_device"/>
    <item android:id="@+id/discoverable"
        app:showAsAction="never"
        android:title="@string/discoverable"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
